# vibecoded_databricks_accelerator

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yml  databricks.yml  pyproject.toml
.claude/agents/: accessibility-auditor.md  api-integration-specialist.md  database-migration-expert.md  devops-engineer.md  documentation-specialist.md  git-workflow-manager.md  performance-optimizer.md  python-backend-engineer.md  refactoring-expert.md  security-auditor.md  test-runner.md  ui-engineer.md
.claude/commands/: bugfix.md  cleanup.md  linting.md  merge.md  work.md
.claude/skills/: api-docs-generator.md  business-product-owner.md  changelog-generator.md  code-formatter.md  commit-message-writer.md  dependency-updater.md  error-handler.md  frontend-qa-tester.md  performance-monitor.md  readme-updater.md  senior-code-reviewer.md  test-executor.md  type-checker.md
.github/workflows/: deploy.yml
docs/: GETTING_STARTED.md  SHAREPOINT_EXCEL_INTEGRATION.md  design.md  mcp-setup-guide.md  potential-projects.md  project-description.md  requirements.md  tasks.md
environments/: example.env.org_name
pipelines/: __init__.py  ldp_engine.py
pipelines/transformations/: __init__.py
pipelines/transformations/bronze/: __init__.py  customers_bronze.py  orders_bronze.py
pipelines/transformations/gold/: __init__.py  customer_metrics_gold.py
pipelines/transformations/silver/: __init__.py  customers_silver.py  orders_silver.py
scripts/: mcp-switch-org.sh
workflows/: etl_job.yml
